lab03/grade.txt
******************* PART 1 BoatTest *********************
JUnit version 4.12
.toString
.getName
.getYearBuilt
.setName - instantiate with Lolipop,set to Little Minnow
.setYearBuilt - instantiate with 1960, set to 1965.

Time: 0.008

OK (5 tests)

+ 25.000 pts of 25.000
Total grade so far: 25.000
******************* PART 2 SailBoatTest *********************
JUnit version 4.12
.getPassengers
.setPassengers - instantiated with (Santa Maria, 1460, 40)updated to 41 using setPassengers
.toString
.SailBoat constructor - instantiate with (Santa Maria, 1460, 41)

Time: 0.009

OK (4 tests)

+ 25.000 pts of 25.000
Total grade so far: 50.000
******************* PART 3 TugBoatTest *********************
JUnit version 4.12
.toString - Theodore, 1989, 58
.setCapacity - Theodore, 1989, 50 - use setCapacity to 58
.getCapacity - Theodore, 1989, 58
.TugBoat constructor - instantiate with (Santa Maria, 1460, 41)

Time: 0.008

OK (4 tests)

+ 25.000 pts of 25.000
Total grade so far: 75.000
******************* PART 4 FleetTest *********************
*************COMPILATION ERROR*******************
tests/csu/csci325/FleetTest.java:80: error: cannot find symbol
        instance.removeBoat(name, year);
                ^
  symbol:   method removeBoat(String,int)
  location: variable instance of type Fleet
1 error
Compilation errors, please fix...
